--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "dependencies": { "baojs": "^0.2.1", "eventsource-parser": "^1.0.0" },
+  "dependencies": { "baojs": "^0.2.1", "eventsource-parser": "^1.0.0", "tencentcloud-sdk-nodejs": "^4.0.576" },
   "devDependencies": {
     "bun-types": "^0.2.1"
   }
